adjust table fixed column z-index

--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -231,14 +231,18 @@
 // z-index list
 @zindex-affix : 10;
 @zindex-back-top : 10;
+@zindex-badge : 10;
+@zindex-dropdown : 1050;
+@zindex-message : 1010;
 @zindex-modal-mask : 1000;
 @zindex-modal : 1000;
+@zindex-popup-close : 10;
 @zindex-notification : 1010;
-@zindex-message : 1010;
-@zindex-popover : 1030;
 @zindex-picker : 1050;
-@zindex-dropdown : 1050;
+@zindex-picker-panel : 10;
+@zindex-popover : 1030;
 @zindex-tooltip : 1060;
+@zindex-table-fixed : 20;
 
 // Animation
 @animation-duration-slow: 0.3s; // Modal
